--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="images/1.jpg" alt="" />
+    <img src="https://images.pexels.com/photos/6075532/pexels-photo-6075532.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" />
 
     <h1>Karamjit Dhaliwal</h1>
     <hr />
